# CPP

./: README.md  a.out  exercis1.cpp  exercise2.cpp  exercise3  exercise3.cpp
Arrays/: main.S  main.i
E-Commerce_Shopping_Cart/: Cart.cpp  Cart.h  Checkout.cpp  Checkout.h  DiscountStrategy.h  FixedAmountDiscount.h  Makefile  PercentageDiscount.h  Product.cpp  Product.h  README.md  ShoppingCart  main.cpp  shopping_cart
Heaps - Priority Queues/: K-th Largest element of the stream.cpp
MoveSemantics/: Move_Semantics_README.md  demo.cpp  l_r_values.cpp
STL/: const_usage.cpp  custom_sort.cpp  deque_learn  deque_learn.cpp  insert_and_emplace.cpp  optional.cpp  overloading_template.cpp  std::any.cpp  std_set_in_cpp.cpp  string_view.cpp  template.cpp  usage_string_view.cpp  variant.cpp
String Algorithms/: KMP 2.cpp  KMP.cpp
Union Find/: README  Union Find.cpp
basic/: main  main.cpp  operator_overloading.cpp  static_member_in_class.cpp
compilationAndLinking/: ex34  header_ex3.h  linkage_ex3.cpp  linkage_ex4.cpp
container_changesC++11/: a.out  extract_function_c++17.cpp  move.cpp  whyEmplace.cpp
exception_handling/: a.out  constructor_&_destructor.cpp  motivation  motivation.cpp  nested_exc_hand.cpp  noexcept.cpp  stack_unwinding.cpp
exercise/: a.out  benchmark.cpp  builder.cpp  callback.cpp  custom_sort  custom_sort.cpp  object_creation_order.cpp  polymorphism  polymorphism.cpp  rule_of_3  rule_of_3.cpp  rule_of_5  rule_of_5.cpp  shallow_deep  shallow_deep.cpp  smartPointer.cpp  stl_exercise.cpp  strive_for_exception_safe_code.cpp
fileSystem/: a.out  basic.cpp  copyUtility  copyUtility.cpp  dircopy  directoryCopyUtility.cpp  fileio.cpp  functions.cpp  rawString.cpp  test.txt
function_wrapper/: a.out  bind.cpp  function.cpp
lambda_expression/: a.out  capture.cpp  function_object  function_object.cpp  function_object_debug  function_objects.cpp  function_pointer.cpp  generalized_capture.cpp  lambda.cpp
leaks/: app  main.cpp
lld/MarketDataProcessor/: .gitignore  CMakeLists.txt  README.md
lld/MarketDataProcessor/include/: MarketData.h  Processor.h  Queue.h  ThreadPool.h
lld/MarketDataProcessor/src/: MarketData.cpp  Processor.cpp  Queue.cpp  ThreadPool.cpp  main.cpp
lld/MarketDataProcessor/tests/: MarketDataProcessorTest.cpp
lld/OrderBookSystem/: .gitignore  CMakeLists.txt  README.md
lld/OrderBookSystem/include/: MarketData.h  Order.h  OrderBook.h
lld/OrderBookSystem/src/: MarketData.cpp  Order.cpp  OrderBook.cpp  main.cpp
lld/OrderBookSystem/tests/: OrderBookTest.cpp
lld/TradingSystem/: .gitignore  CMakeLists.txt  README.md  build_and_test.sh  generate_proto.sh
lld/TradingSystem/include/: Client.h  Connection.h  EventLoop.h  MarketDataStream.h  OrderRouter.h  Protocol.h  RiskManager.h  Server.h  TradingTypes.h
lld/TradingSystem/proto/: market_data.proto  order.proto  system.proto
lld/TradingSystem/src/: Client.cpp  Connection.cpp  EventLoop.cpp  MarketDataStream.cpp  OrderRouter.cpp  RiskManager.cpp  Server.cpp  main.cpp
lld/TradingSystem/tests/: CMakeLists.txt  ConnectionTest.cpp  EventLoopTest.cpp  RiskManagerTest.cpp  TradingCasesTest.cpp
lld/WebpageCounter/: .gitignore  CMakeLists.txt  Makefile  README.md  WebpageCounter  WebpageCounter.cpp  counter_debug  debug_counter  robust_counter  stress_counter  test_output  verbose_counter  webpage_counter
lld/WebpageCounter/include/: Logger.h  WebpageCounter.h
lld/WebpageCounter/src/: Logger.cpp  WebpageCounter.cpp  main.cpp
lld/WebpageCounter/tests/: WebpageCounterTest.cpp
lld/food_delivery_app/: CMakeLists.txt  DEVELOPMENT_GUIDE.md  README.md  TomatoApp.h  main.cpp
lld/google_doc/good_design/: CMakeLists.txt  README.md  document.cpp  document_editor  document_element.h  document_renderer.h  document_storage.h  output.txt
lld/google_doc/good_design/include/: document.h  document_element.h  document_renderer.h  document_storage.h  profiler.h
lld/google_doc/good_design/src/: document.cpp  document_element.cpp  document_renderer.cpp  document_storage.cpp  main.cpp
lld/singleton_with_thread/: CMakeLists.txt  main
lld/singleton_with_thread/include/: board.h
lld/singleton_with_thread/src/: board.cpp  main.cpp
lld/singleton_with_thread/tests/: test_board.cpp
moreC++Goodies/: README.md  constexpr.cpp  enum.cpp  initializer_list.cpp  literals.cpp  optimized_search.cpp  string_streams.cpp  strings.cpp  unions.cpp
multithreading/: additional_key_concepts.txt  atomic_operations.cpp  basic  basic.cpp  deadlock_prevention.cpp  exception_handling_in_thread.cpp  fizz_circle  launch_policies.cpp  memory_model_and_ordering.cpp  memory_snapshot_in_threading.cpp  mutex.cpp  promise_&_exception.cpp  read_Write_locks.cpp  returning_value_from_thread.cpp  task_based_concurrency.cpp  task_based_concurrency1.cpp  thread_functions.cpp  thread_game.cpp  thread_pool.cpp  thread_safe_cpp_demo_commented.cpp  thread_safe_demo  thread_safety_pattern.cpp  thread_sync_with_mutex.cpp  wait.cpp
oops/: a.out  abstract_class.cpp  basic.cpp  diamond_inheritance.cpp  override_&_final.cpp  pure_virtual_body.cpp  pure_virtual_impl.cpp  pure_virtual_inheritance.cpp  rtti_example.cpp  stream_inheritance.cpp
operatorOverloading/: a.out  integer.cpp  integer.h  main.cpp  smt_ptr.cpp
plantUML/: simple_order_request.puml
smart_pointers/: a.out  circular_ref.cpp  deleter.cpp  dynamic_array.cpp  integer.cpp  integer.h  make.cpp  sh_ptr.cpp  u_ptr.cpp  weak_ptr.cpp
streams/: CPP_Streams_README.md
template_programming/: a.out  class_template.cpp  exercise1  exercise1.cpp  explicit_specialisation.cpp  explicit_specialisation_class_template.cpp  factory_pattern_assignment.cpp  non-type_template_arg.cpp  partial_specialisation.cpp  perfect_forwarding.cpp  static_assert.cpp  typeTraits.cpp  typedef_alias.cpp  variadic_template.cpp
tradesocio_ass/: a.out  p1  p1.cpp  p11_main  p1_main  p2  p2.cpp  p2_main  visualizer_main.cpp
typeConversion/: a.out  initialization_&_assignment.cpp  integer.cpp  integer.h  main.cpp  primitive_2_user.cpp  user_2_primitive.cpp  user_2_user.cpp
variable_decl_keyword/: README.md
(+254 files in other folders)
